# githubactiontest

./: .dockerignore  CMakeLists.txt
.github/workflows/: build.yml
docker/: Dockerfile
src/: main.cpp
